Add compatibility with kirkstone.
The layer supports kirkstone.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -3,6 +3,6 @@
 
 BBPATH .= ":${LAYERDIR}"
 
-LAYERSERIES_COMPAT_bgnetworks = " honister"
+LAYERSERIES_COMPAT_bgnetworks = " honister kirkstone"
 
 BGNETWORKS_LAYERDIR := "${LAYERDIR}"
